unpackaged/main/default/objects/project_cloud__Resource_Request__c/project_cloud__Resource_Request__c.object-meta.xml
<CustomObject>
    <label>Resource Request</label>
    <nameField>
        <displayFormat>RR-{0000000000}</displayFormat>
        <label>Resource Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>