unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__Active__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field indicates whether or not a Resource Request is Active.  Only Active Resource Requests impact Resource Capacity and Load.</description>
    <inlineHelpText>This field indicates whether or not a Resource Request is Active.  Only Active Resource Requests impact Resource Capacity and Load.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>