unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Approval_Status__c</fullName>
    <description>This field indicates the Approval Status for a Resource Request.</description>
    <inlineHelpText>This field indicates the Approval Status for a Resource Request.</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>