unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__Days__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Days__c</fullName>
    <description>This field indicates the number of days requested off for PTO.</description>
    <inlineHelpText>This field indicates the number of days requested off for PTO.</inlineHelpText>
    <label>Days</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>