unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__Details__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Details__c</fullName>
    <description>This optional field provides the ability to include details related to a Resource Request.</description>
    <inlineHelpText>This optional field provides the ability to include details related to a Resource Request.</inlineHelpText>
    <label>Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>