unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours__c</fullName>
    <description>This field represents the total number of hours requested for a Resource or Work Type over a given date range.</description>
    <inlineHelpText>This field represents the total number of hours requested for a Resource or Work Type over a given date range.</inlineHelpText>
    <label>Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>