unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__Hours_Day__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours_Day__c</fullName>
    <formula>IF(ISBLANK( project_cloud__Hours__c ),
        project_cloud__Percentage_of_Work_Day__c * 8,
        project_cloud__Hours__c /  project_cloud__Working_Days__c 
) * project_cloud__Number_People__c</formula>
    <inlineHelpText>This field will calculate the number of hours per day to be expected from the Resource Request multiplied by the amount of people needed.</inlineHelpText>
    <label>Hours Per Day (Calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>