unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__Hours_Person__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours_Person__c</fullName>
    <formula>project_cloud__Hours__c / project_cloud__Working_Days__c / project_cloud__Number_People__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This formula will calculate how many hours is to be expected per user based on:  how many hours are needed, the working days and how many people will be needed.</inlineHelpText>
    <label>Hours per Person</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>