unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__Location__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field specifies a Location or a Team for the Resource Request and impacts Resource Capacity and Resource Load calculations.</description>
    <inlineHelpText>This field specifies a Location or a Team for the Resource Request (e.g. North America, Europe, etc.).</inlineHelpText>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>project_cloud__Work_Type__c.project_cloud__Type__c</field>
            <operation>equals</operation>
            <value>Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>project_cloud__Work_Type__c</referenceTo>
    <relationshipLabel>Resource Requests (Location)</relationshipLabel>
    <relationshipName>Resource_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>