unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__Number_People__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Number_People__c</fullName>
    <defaultValue>1</defaultValue>
    <description>This field indicates the number of resources requested when submitting a request for a specific Work Type.</description>
    <inlineHelpText>This field indicates the number of resources requested when submitting a request for a specific Work Type.</inlineHelpText>
    <label>Number of People</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>