unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use this field to create/relate Resource Requests back to an Opportunity during the Sales stage.</description>
    <inlineHelpText>This field relates a Resource Request to an Opportunity (if applicable).</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Resource Requests</relationshipLabel>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>