unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__Percentage_of_Work_Day__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Percentage_of_Work_Day__c</fullName>
    <description>This field indicates the percentage of one or more resource&#39;s day requested, based on the standard 8 hour work day.</description>
    <inlineHelpText>This field indicates the percentage of one or more resource&#39;s day requested, based on the standard 8 hour work day.</inlineHelpText>
    <label>Percentage of Work Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>