unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__Project__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use this field to create/relate Resource Requests back to a Project.</description>
    <inlineHelpText>This field relates a Resource Request to a Project (if applicable)</inlineHelpText>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Resource Requests</relationshipLabel>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>