unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__PTO_Type__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__PTO_Type__c</fullName>
    <description>This field indicates the type of PTO being requested for a specific user.</description>
    <inlineHelpText>This field indicates the type of PTO being requested for a specific user.</inlineHelpText>
    <label>PTO Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vacation</fullName>
                <default>true</default>
                <label>Vacation</label>
            </value>
            <value>
                <fullName>Sick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>