unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__Resource__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field specifies a Resource for the Resource Request and impacts Resource Capacity and Resource Load calculations.</description>
    <inlineHelpText>This field specifies a Resource for the Resource Request.</inlineHelpText>
    <label>Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.project_cloud__Allocatable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>