unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__Start__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Start__c</fullName>
    <description>The Start Date of the Resource Request is used in Resource Capacity and Load calculations to distribute requested hours across a date range.</description>
    <inlineHelpText>This field indicates the Start Date of the Date Range for which a Resource Request is being generated.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>