unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__Work_Type__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Work_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field specifies a Work Type for the Resource Request and impacts Resource Capacity and Resource Load calculations.</description>
    <inlineHelpText>This field specifies a Work Type for the Resource Request.</inlineHelpText>
    <label>Work Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>project_cloud__Work_Type__c.project_cloud__Type__c</field>
            <operation>equals</operation>
            <value>Skill</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>project_cloud__Work_Type__c</referenceTo>
    <relationshipLabel>Resource Requests</relationshipLabel>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>