unpackaged/main/default/objects/project_cloud__Resource_Request__c/fields/project_cloud__Working_Days__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Working_Days__c</fullName>
    <inlineHelpText>This field will show how many working days are needed for this resource request.</inlineHelpText>
    <label>Working Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>