unpackaged/main/default/objects/project_cloud__Resource_Request__c/recordTypes/project_cloud__PTO.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__PTO</fullName>
    <active>true</active>
    <description>Create a Resource Request for PTO</description>
    <label>PTO</label>
</RecordType>