unpackaged/main/default/objects/project_cloud__Resource_Request__c/recordTypes/project_cloud__Resource_Hours.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__Resource_Hours</fullName>
    <active>true</active>
    <description>Create a Resource Request for a specific resource by inputting a total number of hours requested for a single resource over a given date range.</description>
    <label>Resource (Hours)</label>
</RecordType>