unpackaged/main/default/objects/project_cloud__Resource_Request__c/recordTypes/project_cloud__Resource_Percent_of_Work_Day.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__Resource_Percent_of_Work_Day</fullName>
    <active>true</active>
    <description>Create a Resource Request for a specific resource based on a percentage of his/her work day over a given date range.</description>
    <label>Resource (Percent of Work Day)</label>
</RecordType>