unpackaged/main/default/objects/project_cloud__Resource_Request__c/recordTypes/project_cloud__Work_Type_Hours.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__Work_Type_Hours</fullName>
    <active>true</active>
    <description>Create a Resource Request for a specific work type by inputting a total number of hours requested for one or more resources over a given date range.</description>
    <label>Work Type (Hours)</label>
</RecordType>