unpackaged/main/default/objects/project_cloud__Resource_Request__c/recordTypes/project_cloud__Work_Type_Percent_of_Work_Day.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__Work_Type_Percent_of_Work_Day</fullName>
    <active>true</active>
    <description>Create a Resource Request for a specific work type for one or more resources based on a percentage of the work day over a given date range.</description>
    <label>Work Type (Percent of Work Day)</label>
</RecordType>