unpackaged/main/default/objects/project_cloud__Resource_Request__c/validationRules/project_cloud__Can_only_populate_percentage_or_hours.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Can_only_populate_percentage_or_hours</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(project_cloud__Percentage_of_Work_Day__c)), NOT(ISBLANK(project_cloud__Hours__c)))</errorConditionFormula>
    <errorMessage>You can only populate Percentage of Day or Hours Per Person, not both.</errorMessage>
</ValidationRule>