unpackaged/main/default/objects/project_cloud__Resource_Request__c/validationRules/project_cloud__Start_Date_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Start_Date_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>project_cloud__Start__c &gt; project_cloud__End__c</errorConditionFormula>
    <errorMessage>End Date must be greater than or equal to Start Date</errorMessage>
</ValidationRule>