unpackaged/main/default/objects/project_cloud__Resource_Request__c/listViews/project_cloud__All.listView-meta.xml
<ListView>
    <fullName>project_cloud__All</fullName>
    <columns>NAME</columns>
    <columns>project_cloud__Opportunity__c</columns>
    <columns>project_cloud__Project__c</columns>
    <columns>project_cloud__Approval_Status__c</columns>
    <columns>project_cloud__Location__c</columns>
    <columns>project_cloud__Work_Type__c</columns>
    <columns>project_cloud__Start__c</columns>
    <columns>project_cloud__End__c</columns>
    <columns>project_cloud__Number_People__c</columns>
    <columns>project_cloud__Hours_Person__c</columns>
    <columns>project_cloud__Hours__c</columns>
    <columns>project_cloud__Percentage_of_Work_Day__c</columns>
    <columns>project_cloud__Working_Days__c</columns>
    <columns>project_cloud__Hours_Day__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>