unpackaged/main/default/objects/project_cloud__Resource_Request__c/listViews/project_cloud__All1.listView-meta.xml
<ListView>
    <fullName>project_cloud__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>